// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be danger 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
    style="--mdc-theme-primary: var(--mdc-theme-error); --mdc-theme-on-primary: var(--mdc-theme-on-error);"
  >
    <div
      class="mdc-button__ripple"
    />
    <span
      class="mdc-button__label"
    />
  </button>
</DocumentFragment>
`;

exports[`Button can have an icon 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
  >
    <div
      class="mdc-button__ripple"
    />
    <i
      class="rmwc-icon rmwc-icon--ligature material-icons mdc-button__icon"
    >
      favorite
    </i>
    <span
      class="mdc-button__label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
  >
    <div
      class="mdc-button__ripple"
    />
    <span
      class="mdc-button__label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;
